--- a/static/configuration.json
+++ b/static/configuration.json
@@ -1,13 +1,13 @@
 {
     "githubUsername": "wzq223755",
-    "blogTitle": "Laziji",
-    "blogDescribe": "欢迎来到辣子鸡的个人博客。",
-    "htmlTitle": "辣子鸡的博客",
+    "blogTitle": "NanZhi",
+    "blogDescribe": "欢迎来到南芷的个人博客。",
+    "htmlTitle": "南芷的博客",
     "fontColor": "#ffffff",
     "useBackgroundImage": false,
-    "backgroundColorLeft": "#2690F9",
-    "backgroundColorRight": "#FC2D2D",
-    "audioUrl": "http://sc1.111ttt.cn:8282/2018/1/03m/13/396131232171.m4a?tflag=1519095601&pin=6cd414115fdb9a950d827487b16b5f97#.mp3",
+    "backgroundColorLeft": "#00EBFC",
+    "backgroundColorRight": "#FFE100",
+    "audioUrl": "http://www.ytmp3.cn/down/55136.mp3",
     "mini": false,
     "webSites":[
         {"name":"v2ex" , "url":"https://www.v2ex.com/member/laziji"}
