--- a/static/configuration.json
+++ b/static/configuration.json
@@ -10,6 +10,6 @@
     "audioUrl": "http://www.ytmp3.cn/down/55136.mp3",
     "mini": false,
     "webSites":[
-        {"name":"v2ex" , "url":"https://www.v2ex.com/member/laziji"}
+        {"name":"南芷的笔记" , "url":"https://blog.kingzq.com/"}
     ]
 }
